--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,7 +3,7 @@ name: UnittestService
 on:      
   push:
     branches:
-      - '*'
+      - 'dev'
   workflow_dispatch:
     inputs:
       force:
@@ -129,34 +129,6 @@ jobs:
         }
         $Uri = "https://raw.githubusercontent.com/TrdHuy/_TrdBuildPlugin/master/DotNet/DotNetUnitTest_CoverageReport_UploadReportToGhPage.ps1"
         Invoke-RestMethod -Uri $Uri -Headers $Headers -OutFile DotNetUnitTest_CoverageReport_UploadReportToGhPage.ps1
-        & .\DotNetUnitTest_CoverageReport_UploadReportToGhPage.ps1 -prvtoken "${{ env.GITHUB_TOKEN }}" `
-            -assemblyfilters "${{ env.ASSEMBLY_FILTER }}" `
-            -coverageOutDir "${{ env.ASSEMBLY_FILTER }}" `
-            -config "Debug" `
-            -platform "x64" `
-            -isUploadArtifactToGitHubPage ([bool]"${{ env.IS_UPLOAD_REPORT_TO_GH_PAGE }}") `
-            -ownerRepoToUploadArtifact "${{ env.OWNER_TO_UPLOAD_ARTIFACT }}" `
-            -branchRepoToUploadArtifact "${{ env.BRANCH_TO_UPLOAD_ARTIFACT }}" `
-            -rootFolderToUploadArtifact "${{ env.ROOT_FOLDER_TO_UPLOAD_ARTIFACT }}" `
-            -projectIdToUploadArtifact "${{ env.PROJECT_ID_TO_UPLOAD_ARTIFACT }}" `
-            -reportSHAToUploadArtifact "${{ github.sha }}" `
-            -gitHubPageRepoToUploadArtifact "${{ env.GIT_REPO_TO_UPLOAD_ARTIFACT }}" `
-            -coverageRetentionHours ([System.Int16]"${{ env.COVERAGE_RETENTION_HOURS }}")
-
-        & .\DotNetUnitTest_CoverageReport_UploadReportToGhPage.ps1 -prvtoken "${{ env.GITHUB_TOKEN }}" `
-            -assemblyfilters "${{ env.ASSEMBLY_FILTER }}" `
-            -coverageOutDir "${{ env.ASSEMBLY_FILTER }}" `
-            -config "Debug" `
-            -platform "x86" `
-            -isUploadArtifactToGitHubPage ([bool]"${{ env.IS_UPLOAD_REPORT_TO_GH_PAGE }}") `
-            -ownerRepoToUploadArtifact "${{ env.OWNER_TO_UPLOAD_ARTIFACT }}" `
-            -branchRepoToUploadArtifact "${{ env.BRANCH_TO_UPLOAD_ARTIFACT }}" `
-            -rootFolderToUploadArtifact "${{ env.ROOT_FOLDER_TO_UPLOAD_ARTIFACT }}" `
-            -projectIdToUploadArtifact "${{ env.PROJECT_ID_TO_UPLOAD_ARTIFACT }}" `
-            -reportSHAToUploadArtifact "${{ github.sha }}" `
-            -gitHubPageRepoToUploadArtifact "${{ env.GIT_REPO_TO_UPLOAD_ARTIFACT }}" `
-            -coverageRetentionHours ([System.Int16]"${{ env.COVERAGE_RETENTION_HOURS }}")
-        
         & .\DotNetUnitTest_CoverageReport_UploadReportToGhPage.ps1 -prvtoken "${{ env.GITHUB_TOKEN }}" `
             -assemblyfilters "${{ env.ASSEMBLY_FILTER }}" `
             -coverageOutDir "${{ env.ASSEMBLY_FILTER }}" `
