--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -11,4 +11,4 @@
 # lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
 # polar: # Replace with a single Polar username
 # buy_me_a_coffee: # Replace with a single Buy Me a Coffee username
-custom: # ["https://nhantien.momo.vn/0383854090"]
+custom: ["https://nhantien.momo.vn/0383854090"]
