--- a/.github/workflows/pull-req-check.yml
+++ b/.github/workflows/pull-req-check.yml
@@ -86,7 +86,7 @@ jobs:
         dotnet nuget remove source "trdhuy-nuget-package-source"
         dotnet nuget add source "https://nuget.pkg.github.com/TrdHuy/index.json" --name "trdhuy-nuget-package-source" --username "trdtranduchuy@gmail.com" --password "${{ secrets.WORK_FLOW_ACCESS_TOKEN }}"
         dotnet restore
-        dotnet test /p:AdminToken=${{ secrets.WORK_FLOW_ACCESS_TOKEN }} /p:ShouldResolveDezonePkgReferences=none /p:DezoneResourceKey=${{ secrets.DEZ_CLIENT_RES_KEY }}
+        dotnet test /p:AdminToken=${{ secrets.WORK_FLOW_ACCESS_TOKEN }} /p:ShouldResolveDezonePkgReferences=none /p:DezoneResourceKey=${{ secrets.DEZ_CLIENT_RES_KEY }} /p:ShouldSkipDezVersionCheck=true
 
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
