--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -131,7 +131,7 @@ jobs:
         Invoke-RestMethod -Uri $Uri -Headers $Headers -OutFile DotNetUnitTest_CoverageReport_UploadReportToGhPage.ps1
         & .\DotNetUnitTest_CoverageReport_UploadReportToGhPage.ps1 -prvtoken "${{ env.GITHUB_TOKEN }}" `
             -assemblyfilters "${{ env.ASSEMBLY_FILTER }}" `
-            -coverageOutDir "${{ env.ASSEMBLY_FILTER }}" `
+            -coverageOutDir "${{ env.COVERAGE_OUT_DIR }}" `
             -config "Release" `
             -platform "x64" `
             -isUploadArtifactToGitHubPage ([bool]"${{ env.IS_UPLOAD_REPORT_TO_GH_PAGE }}") `
@@ -141,11 +141,12 @@ jobs:
             -projectIdToUploadArtifact "${{ env.PROJECT_ID_TO_UPLOAD_ARTIFACT }}" `
             -reportSHAToUploadArtifact "${{ github.sha }}" `
             -gitHubPageRepoToUploadArtifact "${{ env.GIT_REPO_TO_UPLOAD_ARTIFACT }}" `
-            -coverageRetentionHours ([System.Int16]"${{ env.COVERAGE_RETENTION_HOURS }}")
+            -coverageRetentionHours ([System.Int16]"${{ env.COVERAGE_RETENTION_HOURS }}") `
+            -additionalProperties @{ "DezoneAdminToken" = "${{ env.GITHUB_TOKEN }}"; "ShouldResolveDezonePkgReferences" = "none"; "DezoneResourceKey" = "${{ env.DEZ_CLIENT_RES_KEY }}"; "ShouldSkipDezVersionCheck" = "true" }
         
         & .\DotNetUnitTest_CoverageReport_UploadReportToGhPage.ps1 -prvtoken "${{ env.GITHUB_TOKEN }}" `
             -assemblyfilters "${{ env.ASSEMBLY_FILTER }}" `
-            -coverageOutDir "${{ env.ASSEMBLY_FILTER }}" `
+            -coverageOutDir "${{ env.COVERAGE_OUT_DIR }}" `
             -config "Release" `
             -platform "x86" `
             -isUploadArtifactToGitHubPage ([bool]"${{ env.IS_UPLOAD_REPORT_TO_GH_PAGE }}") `
@@ -155,8 +156,9 @@ jobs:
             -projectIdToUploadArtifact "${{ env.PROJECT_ID_TO_UPLOAD_ARTIFACT }}" `
             -reportSHAToUploadArtifact "${{ github.sha }}" `
             -gitHubPageRepoToUploadArtifact "${{ env.GIT_REPO_TO_UPLOAD_ARTIFACT }}" `
-            -coverageRetentionHours ([System.Int16]"${{ env.COVERAGE_RETENTION_HOURS }}")
-   
+            -coverageRetentionHours ([System.Int16]"${{ env.COVERAGE_RETENTION_HOURS }}") `
+            -additionalProperties @{ "DezoneAdminToken" = "${{ env.GITHUB_TOKEN }}"; "ShouldResolveDezonePkgReferences" = "none"; "DezoneResourceKey" = "${{ env.DEZ_CLIENT_RES_KEY }}"; "ShouldSkipDezVersionCheck" = "true" }
+
     # The coverage report only supported for version up commit, unittest_* and dev* branch 
     ################### UNITTES REGION #######################
     #- name: Run tests with coverage
